--- a/index.html
+++ b/index.html
@@ -18,14 +18,13 @@
 
 
 
-<!--navigationslogo testestestest-->
+<!--navigationslogo-->
         <div class="logo-wrapper">
         <img src="img/logo.svg" class="logo" alt="ModLyset logo-gå til forsiden-">
         <span class="company-name">ModLyset</span> <!--angiver navnet for websiden ved siden af logoet-->
 
         </div>
 
-<h1>test</h1>
 
 
 <!--navigations burger--> 
