--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <!--navigationslogo-->
         <div class="logo-wrapper">
-        <img src="img/logo.svg" class="logo" alt="ModLyset logo-gå til forsiden-">
+        <a href="index.html"><img src="img/logo.svg" class="logo" alt="ModLyset logo-gå til forsiden-"></a>
         <span class="company-name">ModLyset</span> <!--angiver navnet for websiden ved siden af logoet-->
 
         </div>
