--- a/kontaktformular.html
+++ b/kontaktformular.html
@@ -19,7 +19,7 @@
 
 <!--navigationslogo-->
         <div class="logo-wrapper">
-        <img src="img/logo.svg" class="logo">
+        <a href="index.html"><img src="img/logo.svg" class="logo"></a>
         <span class="company-name">ModLyset</span> <!--angiver navnet for websiden ved siden af logoet-->
 
         </div>
@@ -28,8 +28,8 @@
             <li><a href="index.html"></a></li> <!--kan bruges nar man skal tage noget fra fontawesome fx hamburger-->
             <li><a href="#">Om os</a></li>
             <li><a href="#">Find support nu</a></li>
-            <li><a href="#">Se test og guids</a></li>
-            <li><a href="#">Kontakt</a></li>
+            <li><a href="underside.html">Se test og guids</a></li>
+            <li><a href="kontaktformular.html">Kontakt</a></li>
         </ul>
 
 
